--- a/app/templates/subscription_success.html
+++ b/app/templates/subscription_success.html
@@ -23,8 +23,8 @@
                         <p class="card-text">Thank you for subscribing! Your plan is now active.</p>
                     {% endif %}
                     
-                    <a href="{{ url_for('main.index') }}" class="btn btn-primary mt-3">Go to Dashboard</a>
-                    <a href="{{ url_for('main.pricing_page') }}" class="btn btn-outline-secondary mt-3">View Other Plans</a>
+                    <a href="{{ url_for('main.root') }}" class="btn btn-primary mt-3">Go to Dashboard</a>
+                    <a href="{{ url_for('main.manage_subscription') }}" class="btn btn-outline-secondary mt-3">View Other Plans</a>
                 </div>
             </div>
         </div>
