--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -122,7 +122,7 @@
 
     <!-- Dashboard Header Banner -->
     <div class="dashboard-header-banner">
-        <h4>{{ _('Welcome back, %(username)s!', username=current_user.username) }}</h4>
+        <h4>{{ _('Welcome back, %(username)s!', username=(current_user.first_name or current_user.username)) }}</h4>
         <p>{{ _('Here\'s an overview of your clinic\'s activity.') }}</p>
         
         {# Subscription Status Display - Always show current plan #}
@@ -140,7 +140,7 @@
                 {% endif %}
             {% endif %}
             {% if current_plan_name == 'Free Plan' %}
-                <a href="{{ url_for('main.pricing_page') }}" class="ms-2 badge bg-success text-decoration-none">{{ _('Upgrade Plan') }}</a>
+                <a href="{{ url_for('main.manage_subscription') }}" class="ms-2 badge bg-success text-decoration-none">{{ _('Upgrade Plan') }}</a>
             {% else %}
                 <a href="{{ url_for('main.my_account') }}" class="ms-2 badge bg-primary text-decoration-none">{{ _('Manage Plan') }}</a>
             {% endif %}
@@ -167,7 +167,7 @@
                                     {{ current_patients_count }} / {{ patient_plan_limit }}
                                     {% if current_patients_count >= patient_plan_limit %}
                                         <br><strong class="text-danger">{{ _('Limit Reached!') }}</strong> 
-                                        <a href="{{ url_for('main.pricing_page') }}" class="badge bg-warning text-dark text-decoration-none ms-1">{{ _('Upgrade') }}</a>
+                                        <a href="{{ url_for('main.manage_subscription') }}" class="badge bg-warning text-dark text-decoration-none ms-1">{{ _('Upgrade') }}</a>
                                     {% elif (patient_plan_limit - current_patients_count) <= 5 %}
                                         <br><strong class="text-warning">{{ _('Nearing Limit') }}</strong>
                                     {% endif %}
