--- a/app/templates/my_account.html
+++ b/app/templates/my_account.html
@@ -117,7 +117,7 @@
 
                         {% if current_plan_name == 'Free Plan' %}
                             <div class="mt-3">
-                                <a href="{{ url_for('main.pricing_page') }}" class="btn btn-success"><i class="bi bi-arrow-up-circle"></i> {{ _('Upgrade to Paid Plan') }}</a>
+                                <a href="{{ url_for('main.manage_subscription') }}" class="btn btn-success"><i class="bi bi-arrow-up-circle"></i> {{ _('Upgrade to Paid Plan') }}</a>
                             </div>
                         {% elif user_subscription and user_subscription.status in ['active', 'trialing'] %}
                             {% if user_subscription.cancel_at_period_end %}
@@ -129,8 +129,8 @@
                                 <!-- Optionally, add a button to re-activate or contact support if they want to undo cancellation -->
                             {% else %}
                                 <div class="mt-3">
-                                    <a href="{{ url_for('main.pricing_page') }}" class="btn btn-primary me-2"><i class="bi bi-arrow-repeat"></i> {{ _('Change Plan') }}</a>
-                                    <a href="{{ url_for('main.manage_subscription') }}" class="btn btn-info me-2"><i class="bi bi-gear-fill"></i> {{ _('Manage Billing Details') }}</a>
+                                    <a href="{{ url_for('main.manage_subscription') }}" class="btn btn-primary me-2"><i class="bi bi-arrow-repeat"></i> {{ _('Change Plan') }}</a>
+                                    <a href="{{ url_for('main.manage_billing') }}" class="btn btn-info me-2"><i class="bi bi-gear-fill"></i> {{ _('Manage Billing Details') }}</a>
                                     <button type="button" class="btn btn-outline-danger" data-bs-toggle="modal" data-bs-target="#cancelSubscriptionModal">
                                         <i class="bi bi-x-octagon"></i> {{ _('Cancel Subscription') }}
                                     </button>
@@ -140,10 +140,10 @@
                             <div class="alert alert-info mt-3">
                                 {{ _('Your subscription for') }} <strong>{{ active_plan.name }}</strong> {{ _('is currently') }} <strong>{{ user_subscription.status | capitalize }}</strong>.
                                 {% if user_subscription.status in ['past_due', 'unpaid'] %}
-                                    {{ _('Please') }} <a href="{{ url_for('main.manage_subscription') }}">{{ _('update your billing information') }}</a>.
+                                    {{ _('Please') }} <a href="{{ url_for('main.manage_billing') }}">{{ _('update your billing information') }}</a>.
                                 {% endif %}
                             </div>
-                            <a href="{{ url_for('main.pricing_page') }}" class="btn btn-success mt-2"><i class="bi bi-arrow-clockwise"></i> {{ _('View Plans / Resubscribe') }}</a>
+                            <a href="{{ url_for('main.manage_subscription') }}" class="btn btn-success mt-2"><i class="bi bi-arrow-clockwise"></i> {{ _('View Plans / Resubscribe') }}</a>
                         {% endif %}
                     </div>
                 </div>
@@ -248,7 +248,7 @@
             <div class="tab-pane fade" id="billing" role="tabpanel" aria-labelledby="billing-tab">
                 <h4 class="mb-3">{{ _('Billing History') }}</h4>
                 <p>{{ _('Details about past invoices and payment methods will be displayed here.') }}</p>
-                <p><a href="{{ url_for('main.manage_subscription') }}" class="btn btn-info"><i class="bi bi-gear-fill"></i> {{ _('Manage Billing Details on Stripe') }}</a></p>
+                <p><a href="{{ url_for('main.manage_billing') }}" class="btn btn-info"><i class="bi bi-gear-fill"></i> {{ _('Manage Billing Details on Stripe') }}</a></p>
                 <div id="invoiceHistory" class="mt-3"></div>
             </div>
         </div>
